--- a/main.html
+++ b/main.html
@@ -40,7 +40,7 @@
   
             <div class="container">
               <figure class="image__container">
-                <img src="assets/images/stage.png" alt="">
+                <img src="assets/images/nazo1.png" alt="nazo1">
               </figure>
                 
  <!--  YouTube貼り付け
