--- a/main.html
+++ b/main.html
@@ -17,7 +17,7 @@
   </svg>
   <header class="header">
     <div class="container">
-      <div class="header__logo"><img src="assets/images/logo3.svg" alt="チームロゴ"></div>
+      <div class="header__logo"><img src="assets/images/logo2.svg" alt="チームロゴ"></div>
       <div class="header__name">N・S高生制作サイト</div>
     </div>
   </header>
@@ -145,7 +145,7 @@ Youtube貼り付けここまで -->
                 <div class="column">
 
                   <figure class="image__container">
-                    <img src="assets/images/stage.png" alt="">
+                    <img src="assets/images/NNN.png" alt="NNN.png">
                   </figure>
 
                   <answer-input v-bind:correct="correctAnswer['stage2']['q2']" v-on:answer-input="answerInput($event, 'stage2', 2)"></answer-input>
