--- a/hint1.html
+++ b/hint1.html
@@ -23,7 +23,7 @@
   </header>
   <main class="main hint-page">
     <!-- タイトルエリア　ここから -->
-    <h1 class="main-title"><img src="assets/images/main-image.png" alt="ハッカーからの挑戦状"></h1>
+    <h1 class="main-title"><img src="assets/images/C0A08EA1-12EB-4FFC-B4E1-A40A1687621B.jpeg" alt="ハッカーからの挑戦状"></h1>
     <!-- タイトルエリア　ここまで -->
     <section class="section">
       <div class="container">
