--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
            なんと！ログインすることが出来なくなっている！！<br>
             調べてみたけどもよくわからない(´;ω;｀)<br>
             そんな矢先、ケータイにメッセージが届いた！！<br>
-            メッセージには「アカウントを返してほしければこの謎に挑戦するがいい！制限時間は45分だ！」<br>
+            メッセージには「アカウントを返してほしければこの３つの謎に挑戦するがいい！制限時間は45分だ！」<br>
             と書かれていた。<br>
            さぁ謎を解いてアカウントを取り戻そう！！<br>
            </p>
