--- a/final.html
+++ b/final.html
@@ -23,8 +23,8 @@
       <div class="container">
         <div class="box bg-color--subcolor">
           <h2 class="section-title--border">全ステージ クリア！</h2>
-          <p class="text-center">おめでとう！あなたはついに全ての謎を解き、先生を救うことができた！<br>
-            そして先生からあるメッセージが伝えられた・・・</p>
+          <p class="text-center">おめでとう！あなたはついに全ての謎を解き、アカウントを取り戻すことが出来た！！<br>
+            そして謎の答えをつなげて読んでみると・・・</p>
         </div>
       </div>
     </section>
@@ -44,10 +44,10 @@ Youtube貼り付けここまで-->
           ß
       </div>
          -->
-        <p class="text-center">あなたはきっと、このメッセージをずっと忘れることはないだろう・・・。<br>
-          これからも家庭科室が封鎖されるようなことがあったら、<br>
-          この教訓をしっかり思い出してくれ。</p>
-        <p class="text-center">それでは、また会おう！</p>
+        <p class="text-center">どうやら犯人は友達が欲しかったみたいだ<br>
+          もし友達になってくれるのであればそのままメールに返信してほしい<br>
+         みんなは友達が欲しいからと言って人のSNSのアカウントを乗っ取らないようにね！！</p>
+        <p class="text-center">謎を解いてくれてありがとう！！！</p>
       </div>
     </section>
     <section class="section bg-color--keycolor">
