--- a/final.html
+++ b/final.html
@@ -65,8 +65,8 @@ Youtube貼り付けここまで-->
             <div class="card">
               <h3 class="card__title">このゲームの企画者</h3>
               <p class="card__content">企画・制作メンバーの紹介など。<br>
-                テキストテキストテキストテキストテキストテキストテキスト<br>
-                テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
+                製作メンバー<br>
+                小山、佐々本、佐々木</p>
             </div>
           </div>
         </div>
