--- a/final.html
+++ b/final.html
@@ -65,6 +65,9 @@ Youtube貼り付けここまで-->
             <div class="card">
               <h3 class="card__title">このゲームの企画者</h3>
               <p class="card__content">企画・制作メンバーの紹介など。<br>
+                本企画は脱出ゲームの入門として、手軽さを意識した作品です。<br>
+                制限時間は45分としていますが、ゲームクリアまでの目安は5分程度です。<br>
+                脱出ゲームを知らない、やった事がないと言う方にはまずこのゲームをお勧めしてみてください。<br>
                 製作メンバー<br>
                 小山、佐々本、佐々木</p>
             </div>
